@@ -1,5 +1,5 @@
 DIST maven-settings-2.1_pre20070611-gen-src.tar.bz2 16589 RMD160 91c4fecb5241a2506acacd1484af185fb4c9d927 SHA1 8128ec26e7619011c8cf0e4007a34a4efec0aafb SHA256 df7e306cfedee5b71d31c7211c4cef61f7c8f6cd6cde4028ebc1aab63e50c3c9
 DIST maven-settings-2.1_pre20070611.tar.bz2 19556 RMD160 6eeace962754c2de26ff2e464cf69ce1ed12c042 SHA1 0489d42c8b800decc9b07f162501839b032fcb42 SHA256 ce0282adc534b2209fa6a49df114c509ac41de741ea2ac23932d0bb249d2721a
-EBUILD maven-settings-2.1_pre20070611.ebuild 854 RMD160 df556881ca270ea9a6cbe74cfbcc27ba6374e96f SHA1 ec194fb092be18dd21dbca1c6d62582c20e6390e SHA256 eb83654e368d2377aa8c23a59ceccc893e5f64117f10cdaa5c513ac45a9547db
-MISC ChangeLog 725 RMD160 8c67b279b07d45945e90552cd8aafe6a90cd7fd9 SHA1 9e488e30d515fdd32daf6f1b3fb2e38d4c756792 SHA256 3f7defb24ad098b5b7f36b0b9284e751dfd862e29b2e806b52c7f2aa4419954e
+EBUILD maven-settings-2.1_pre20070611.ebuild 956 RMD160 662d4a95396699955212cd1aacde05a7bc6c01a6 SHA1 d0a90848f3abd83df4b9813444f179c7e6cd5f19 SHA256 b206d76d0163aba3bdec5a90cd84c993aaada48bd07c6b2a95dd4e3b5ca90c2e
+MISC ChangeLog 827 RMD160 373bded6288d5ab0d871c92bc3395c22b52e4e14 SHA1 16c0786d1d6a08aab4e5f6344ed835a6a8a494e5 SHA256 3cff0222620059a99193e44f144fb0ad8caa3d7db5b0ca120722be0b5a952640
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
