@@ -19,9 +19,9 @@ COMMON_DEPS="
 =dev-java/jdom-1.0*
 dev-java/maven-build-context
 dev-java/maven-model
-dev-java/plexus-component-api
-dev-java/plexus-container-default
-dev-java/plexus-utils
+>=dev-java/plexus-utils-1.4.7_pre20071021
+>=dev-java/plexus-container-default-1.0_alpha33_pre20071021
+>=dev-java/plexus-component-api-1.0_alpha33_pre20071021
 "
 DEPEND=">=virtual/jdk-1.4 ${COMMON_DEPS}"
 RDEPEND=">=virtual/jre-1.4 ${COMMON_DEPS}"
@@ -29,9 +29,9 @@ JAVA_MAVEN_CLASSPATH="
 jdom-1.0
 maven-build-context
 maven-model
-plexus-component-api
-plexus-container-default
-plexus-utils
+plexus-utils-1.4.7
+plexus-container-default-1.0_alpha33
+plexus-component-api-1.0_alpha33
 "
 
 RESTRICT=test
