@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Oct 2007; kiorky <kiorky@cryptelium.net>
+  maven-settings-2.1_pre20070611.ebuild:
+  fix DEPENDS
+
   11 Jun 2007; kiorky <kiorky@cryptelium.net> -maven-settings-2.0.ebuild,
   +maven-settings-2.1_pre20070611.ebuild:
   Maven 2.1 Bump
